# prote.io

./: .gitignore  README.md  pyproject.toml  snake_game.sh
src/: amino.py  cpu_usage.py  direction.py  main.py  segment.py  snake.py
